added (backwards-compatible) "Msg on Error" option for "device action" node type, cleanup

--- a/pimatic/pimatic.html
+++ b/pimatic/pimatic.html
@@ -22,14 +22,18 @@
 -->
 
 <script type="text/x-red" data-template-name="rule action">
-   <div class="form-row">
+    <div class="form-row">
         <label for="node-input-controller"><i class="fa fa-globe"></i>&nbsp;Controller</label>
         <input type="text" id="node-input-controller">
-   </div>
-   <div class="form-row">
+    </div>
+    <div class="form-row">
         <label for="node-input-actionExpression"><i class="fa fa-bolt"></i>&nbsp;Action Expr.</label>
         <input type="text" id="node-input-actionExpression">
-   </div>
+    </div>
+    <div class="form-row">
+        <label for="node-input-messageOnError"><i class="fa fa-exclamation-triangle"></i>&nbsp;Msg on Error</label>
+        <input type="checkbox" id="node-input-messageOnError" style="display: inline-block; width: auto; vertical-align: top;">
+    </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i>&nbsp;Name</label>
         <input type="text" id="node-input-name">
@@ -42,16 +46,21 @@
 	<p><b>Configuration</b></p>
     <ul>
         <li><code>Controller</code>: Select or create an controller to connect to a pimatic server</li>
-        <li><code>Action</code>: Action expression which may contain variables to include items of the message object, for example <code>${ payload }</code></li>
+        <li><code>Action</code>: Action expression which may contain variables to include items
+        of the message object, for example <code>${ payload }</code></li>
+        <li><code>Msg on Error</code>: If ticked a message will also be sent on invocation error, no
+        message will be sent on invocation error otherwise.
         <li><code>Name</code>: Specify a name for the node (optional)</li>
    	 </ul>
 
 	<p><b>Message output</b></p>
     <ul>
         <li><code>msg.payload</code>: Result value (if any, empty string otherwise)</li>
-        <li><code>msg.success</code>: Execution status (true or false)</li>
+        <li><code>msg.success</code>: Execution status (true or false, where false can only occur
+        if <code>Msg on Error</code> is ticked)</li>
         <li><code>msg.actionString</code>: The action string resulting from variable substitution</li>
-        <li><code>msg.error</code>: Error message (only present if <code>msg.success</code> is false)</li>
+        <li><code>msg.error</code>: Error message (only present if <code>Msg on Error</code> is ticked
+        and <code>msg.success</code> is false)</li>
    	 </ul>
 </script>
 
@@ -62,6 +71,7 @@
     defaults: {
       controller: {value: "", type: "controller", required: true},
       actionExpression: {value: "", required: true},
+      messageOnError: {value: false, required: true},
       name: {value: "", required: false}
     },
     inputs: 1,
@@ -81,7 +91,7 @@
 -->
 
 <script type="text/x-red" data-template-name="device action">
-   <div class="form-row">
+    <div class="form-row">
         <label for="node-input-controller"><i class="fa fa-globe"></i>&nbsp;Controller</label>
         <input type="text" id="node-input-controller">
     </div>
@@ -101,7 +111,11 @@
         <label for="node-input-parameterValue"><i class="fa fa-bookmark-o"></i>&nbsp;Param Value</label>
         <input type="text" id="node-input-parameterValue">
     </div>
-     <div class="form-row">
+    <div class="form-row">
+        <label for="node-input-messageOnError"><i class="fa fa-exclamation-triangle"></i>&nbsp;Msg on Error</label>
+        <input type="checkbox" id="node-input-messageOnError" style="display: inline-block; width: auto; vertical-align: top;">
+    </div>
+    <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i>&nbsp;Name</label>
         <input type="text" id="node-input-name">
     </div>
@@ -122,15 +136,19 @@
         <li><code>Param Value</code>: Value of the action parameter (optional). If omitted,
             <code>msg.parameterValue</code> or <code>msg.payload</code> will be used or no
             parameter will be sent if no Parameter Name is available. </li>
+        <li><code>Msg on Error</code>: If ticked a message will also be sent on invocation error, no
+        message will be sent on invocation error otherwise.
         <li><code>Name</code>: Specify a name for the node (optional)</li>
-   	 </ul>
+   	</ul>
 
 	<p><b>Message output</b></p>
     <ul>
         <li><code>msg.payload</code>: Result value (if any, empty string otherwise)</li>
-        <li><code>msg.success</code>: Execution status (true or false)</li>
-        <li><code>msg.error</code>: Error message (only present if <code>msg.success</code> is false)</li>
-   	 </ul>
+        <li><code>msg.success</code>: Execution status (true or false, where false can only occur
+        if <code>Msg on Error</code> is ticked)</li>
+        <li><code>msg.error</code>: Error message (only present if <code>Msg on Error</code> is ticked
+        and <code>msg.success</code> is false)</li>
+   	</ul>
 </script>
 
 <script type="text/javascript">
@@ -143,6 +161,7 @@
       action: {value: "", required: true},
       parameterName: {value: "", required: false},
       parameterValue: {value: "", required: false},
+      messageOnError: {value: false, required: true},
       name: {value: "", required: false}
     },
     inputs: 1,
